2.0.19 (04 September 2002)
* Correct the description of the access check algorithm in acl(5).
* Add --numeric option to getfacl (so all uid's/gid's are displayed
  numerically rather than by symbolic name). Also enlarge the static
  buffer used for numeric identifiers from 12 to 22 characters, which
  is enough for 64 bit id's.
* Add a test case for setting just a base ACL.
* Make the test/run script return a proper status code.
* Check for ENOATTR and for ENODATA error numbers in places where
  ENOATTR is expected, so if ENOATTR is assigned a separate number
  we'll only need to rebuild.

2.0.18 (21 August 2002)
* Setfacl failed to parse ACLs with whitespace around user/group
  names or ids (e.g., 'u: bin :rw', 'u: 0 :rwx').

2.0.17 (12 August 2002)
* Setfacl tried to retrieve the default ACL of regular files, which
  resulted in errno = EACCES since 2.0.13, and broke setfacl's
  --restore operation.

2.0.16 (08 August 2002)
* Fix an IA64 alignment issue affecting several libacl functions.
* Updated libacl version number from libacl.so.1.0.2 to libacl.so.1.0.3

2.0.15 (08 July 2002)
* Fix configure warning (autoconf 2.13) - namely:
	"AC_TRY_RUN called without default to allow cross compiling"
* Fix a couple of typos in the documentation
* Fix a Debian-specific build issue

2.0.14 (04 July 2002)
* Build infrastructure updates so that configure options can be used
  to specify paths rather than semi-hard-coded path names controlled
  by ROOT/ROOT_PREFIX env variables; eg. now allows /lib64 and /lib32.

2.0.13 (25 June 2002)
* Make acl_get_file() fail for regular files and type ACL_TYPE_DEFAULT,
  as required by 1003.1e draft 17. Update manual page accordingly.
* Make acl_set_file() fail for regular files and type ACL_TYPE_DEFAULT,
  as required by 1003.1e draft 17. Update manual page accordingly.
* Updated libacl version number from libacl.so.1.0.1 to libacl.so.1.0.2.
* Updated chacl(1) command to behave correctly with this libacl change.

2.0.12 (25 June 2002)